fix product-cart-list when there are too many products with overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -95,6 +95,8 @@
   flex-direction: column;
   row-gap: 15px;
   z-index: 1;
+  max-height: 600px;
+  overflow: auto;
 }
 
 .product-cart-list-hidden {
